fix: cart icon smaller

--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -57,8 +57,8 @@ Logo styles
 }
 
 .logo-cart {
-  height: 45px;
-  width: 45px;
+  height: 20px;
+  width: 20px;
   display: inline-block;
   background: url('../../../content/images/basket-white.png') no-repeat center center;
   background-size: contain;
